h1. CHANGELOG

h2. 1.3.0 March 15, 2012

* implement and enable support for 'run_after' parameter (contributed by Rico Sta. Cruz) 
* update 'omniauth' recipe to add 'omniauth-google' gem (contributed by Rico Sta. Cruz)
* update 'compass' recipe to add 'compass-rails' gem (contributed by Rico Sta. Cruz)
* update gem 'compass' from 0.12.rc.1 to 0.12.1 (contributed by Rico Sta. Cruz) 
* fix 'rspec' recipe to add 'factory_girl_rails' to development group (Philippe Van Eerdenbrugghe)
* add 'active_admin' recipe (contributed by Philippe Van Eerdenbrugghe)
* update gem 'omniauth' from 1.0.2 to 1.0.3
* update gem 'bson_ext' from 1.5.2 to 1.6.1
* update gem 'factory_girl_rails' from 1.7.0 to 2.0.0.rc
* update gem 'rspec-rails' from 2.8.1 to 2.9.0.rc2
* update gem 'devise' from 2.0.4 to 2.1.0.rc

h2. 1.2.1 March 11, 2012

* fix 'backbone' recipe

h2. 1.2.0 March 7, 2012

* remove 'navigation' recipe (consolidated with 'html5' recipe)

h2. 1.1.8 March 5, 2012

* improve 'html5' recipe to download files for complex application layout and css for Twitter Bootstrap
* update gem 'mongoid' from 2.4.4 to 2.4.6

h2. 1.1.7 March 4, 2012

* improve 'home_page' recipe to show how to set a home page for Devise authenticated users
* improve 'devise' recipe for Devise 'confirmable' option
* improve 'cleanup' recipe to remove commented lines from config/routes.rb
* improve 'html5' recipe to allow choice of bootstrap_less or bootstrap_sass (contributed by gmgp)
* remove 'css_setup' recipe (consolidated with 'html5' recipe)
* add 'inherited_resources' recipe (contributed by gmgp)
* add 'simple_form' recipe (contributed by gmgp)

h2. 1.1.6 February 28, 2012

* update 'devise' recipe to accommmodate RSpec and Cucumber for Devise 'confirmable' option

h2. 1.1.5 February 26, 2012

* update 'action_mailer' recipe to configure test environment
* update 'action_mailer' recipe to configure ActionMailer to send email using a GMail account